[project]
name = ""
version = ""
description = ""
authors = [
    {name = "francisthebasilisk", email = "snorkysnark@gmail.com"},
]
dependencies = [
    "parsel>=1.6.0",
    "httpx>=0.22.0",
    "anyio>=3.5.0",
]
requires-python = ">=3.9"
license = {text = "MIT"}

[tool]
[tool.pdm]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
